# gestion-de-biblioteca

./: CMakeLists.txt  README.md
gestion-de-biblioteca/: db.sql  gestion-de-biblioteca.sqlproj  schemas-roles.sql  tables.sql  tests.sql  views.sql
gestion-de-biblioteca/proc/: cliente.sql  sistema.sql
gestion-de-biblioteca/sp/: sp-Cliente.sql  sp-OperacionesBiblioteca.sql  sp-Sistema.sql
gestion-de-biblioteca/views/: v-Sistema.sql
include/biblioteca/: Autor.h  Categoria.h  Libro.h  Prestamo.h  Usuario.h
src/: CMakeLists.txt  main.cpp
src/biblioteca/: Autor.cpp  CMakeLists.txt  Categoria.cpp  Prestamo.cpp  Usuario.cpp
src/util/: CMakeLists.txt
